<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="Timer Settings">

        <!-- TODO round time : Make it so that minimum is 10 secs -->
        <com.eightbitdreams.boxingintervaltimer.TimePreference
            android:key="round_time_key"
            android:title="@string/round_time_title"
            android:defaultValue="3:00" />
        <!-- TODO rest time : Make it so that minimum is 10 secs -->
        <com.eightbitdreams.boxingintervaltimer.TimePreference
            android:key="rest_time_key"
            android:title="@string/rest_time_title"
            android:defaultValue="1:00"/>
        <CheckBoxPreference android:key="prep_time_key"
            android:title="@string/prep_time_title"
            android:summary="@string/prep_time_summary"
            android:defaultValue="true"/>
        <ListPreference
            android:key="warn_time_key"
            android:title="@string/warn_time_title"
            android:summary="@string/warn_time_summary"
            android:entries="@array/warn_time"
            android:entryValues="@array/warn_time_values"
            android:defaultValue="20" />

        <!-- TODO : Use Number Picker to limit the number of rounds to 99 -->
        <EditTextPreference
            android:key="number_rounds_key"
            android:title="@string/num_round_title"
            android:numeric="integer"
            android:defaultValue="12"/>
        <CheckBoxPreference android:key="mute_key"
            android:defaultValue="false"
            android:title="@string/mute_title"
            android:summary="@string/mute_summary"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="Phone Settings">
        <CheckBoxPreference
            android:key="keep_awake_key"
            android:title="@string/keep_awake_title"
            android:defaultValue="true"
            android:summary="@string/keep_awake_summary"/>
        <CheckBoxPreference
            android:key="proximity_sensor_key"
            android:title="@string/proximity_sensor_title"
            android:defaultValue="true"
            android:summary="@string/proximity_sensor_summary"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="Others">
        <Preference android:key="mailTo"
            android:title="Send Bug to Developer"
            android:summary="report errors to me. :)"/>
        <!--<PreferenceScreen-->
            <!--android:title="Email Developer"-->
            <!--android:summary="Send bug report via email">-->
        <!--</PreferenceScreen>-->
        <Preference
            android:key="version"
            android:title="Version 0.1.1-beta"/>


    </PreferenceCategory>
</PreferenceScreen>