<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:keepScreenOn="true"
    tools:context=".MainActivity">
    <!-- TODO Admob : Add ads on the top of the app -->
    <!-- TODO LandScape Mode -->
    <!-- TODO Stats and days used -->
    <LinearLayout
        android:id="@+id/round_panel"
        android:layout_centerHorizontal="true"
        android:padding="6dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/round"
            android:textSize="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/round_number"
            android:paddingLeft="4dp"
            android:textSize="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- TODO Change Font Family for app -->
        <TextView
            android:id="@+id/work_preview_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="work: 3:00"
            android:layout_weight="1"
            android:paddingLeft="20dp"/>
        <TextView
            android:id="@+id/rest_preview_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="rest: 1:00"
            android:paddingRight="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/time_panel"
        android:layout_below="@+id/round_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/timer_bg_gray">
        <TextView
            android:id="@+id/time_left_textView"
            android:textSize="120dp"
            android:textColor="#000000"
            android:text="@string/initial_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_panel">
        <Button
            android:id="@+id/run_button"
            android:textSize="24dp"
            android:padding="18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bottom_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:gravity="center|bottom">
        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="18dp"
            android:text="@string/reset"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="18dp"
            android:text="@string/settings"
            android:layout_weight="1"/>
    </LinearLayout>

</RelativeLayout>
